--- a/dpi-frontend/src/index.css
+++ b/dpi-frontend/src/index.css
@@ -34,6 +34,12 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+#root {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
 h1 {
   font-size: 3.2em;
